<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout_PetList"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:stretchColumns="*" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_albums"
        android:textColor="#0f0"
        android:textSize="11pt"
        android:id="@+id/yourALbums" />

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textColor="#f00" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_desc"
            android:textColor="#f00" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_added"
            android:textColor="#f00" >
        </TextView>
    </TableRow>

    <Button
        android:id="@+id/ButtonEnterMorePets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_more_albums" />

</TableLayout>