<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/album_new"
        android:textColor="#0f0"
        android:textSize="11pt"
        android:id="@+id/textView" />

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name" >
            </TextView>

            <EditText
                android:id="@+id/EditTextAlbumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_description" >
            </TextView>

            <EditText
                android:id="@+id/EditAlbumDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </EditText>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/ButtonStartAlbum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/album_new"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/TableLayout01"
        android:layout_alignParentStart="true"
        android:onClick="startNewAlbum">
    </Button>

</LinearLayout>